fix: change img on svg in clients

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Очаруй клиента</title>
+  <meta name="description"
+    content="Почувствуй волшебство клиентского сервиса в мире ИЛЬ ДЕ БОТЭ! Очаровывай клиентов, выигрывай призы и присоединяйся к команде✨">
+  <title>Очаруй клиента с ИЛЬ ДЕ БОТЭ</title>
 </head>
 
 <body>
